minor misalignment fixes

--- a/src/scss/pages.sass
+++ b/src/scss/pages.sass
@@ -5,17 +5,15 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
-  height: 100svh
-  width: 100svw
   overflow-x: hidden
 
 body
   background: $black
-  height: 100svh
 
 main
   height: 100svh
   overflow-y: scroll
+  overflow-x: hidden
   scroll-behavior: smooth
   box-sizing: border-box
   padding: 40px 80px 80px
