--- a/src/scss/portfolio.sass
+++ b/src/scss/portfolio.sass
@@ -5,13 +5,10 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
-  height: 100svh
-  width: 100svw
-  overflow-x: hidden
+  overflow: hidden
 
 body
   background: $black
-  height: 100svh
 
 main
   height: 100svh
