--- a/src/scss/style.sass
+++ b/src/scss/style.sass
@@ -5,16 +5,15 @@ html, body
   padding: 0
   margin: 0
   scroll-behavior: smooth
-  height: 100svh
-  width: 100svw
-  overflow-x: hidden
+  overflow: hidden
 
 body
   background: $white
-  height: 100svh
 
 main
   height: 100svh
+  overflow-y: scroll
+  overflow-x: hidden
   scroll-snap-type: y mandatory
   scroll-snap-stop: always
   scroll-behavior: smooth
